fix(v1): handle missing machine-id files gracefully
Add existence checks before reading machine-id files to prevent
NoSuchFileException. Also use explicit UTF-8 encoding for consistent
cross-platform behavior.